--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         const canvas = document.getElementById('gameCanvas');
         const ctx = canvas.getContext('2d');
 
-        const socket = new WebSocket(`${document.location.protocol.startsWith('https') ? 'wss' : 'ws'}://${window.location.hostname || 'localhost:8080'}/ws`);
+        const socket = new WebSocket(document.location.protocol.startsWith('https') ? `wss://${window.location.hostname}/ws` : 'ws://localhost:8080/ws');
         let gameLevel = null;
 
         let prevMsgTime = Date.now();
