add desktop note

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <body>
     <p>deathmatch mode. shoot other people to build up your score (lose points by getting shot!)</p>
-    <p>click to shoot, move with arrow keys or w/a/s/d</p>
+    <p>click to shoot, move with arrow keys or w/a/s/d. <b>desktop only sorry!</b></p>
     <div class="game">
         <canvas id="gameCanvas" width="800" height="800"></canvas>
         <div class="side">
